# ui-tests-stocktake

./: pyproject.toml  pytest.ini
modules/: product.py  product_group.py  product_supplier.py  product_type.py  product_unit.py  purchase.py
pages/: base_page.py  dashboard_page.py  draft_purchase_orders_page.py  login_page.py  new_purchase_order_page.py  product_page.py  purchase_order_history_page.py
tests/: conftest.py
tests/features/: dashboard.feature  login.feature  product.feature  purchase.feature
tests/steps/: test_dashboard_steps.py  test_login_steps.py  test_product_steps.py  test_purchase_steps.py
utils/: api_utils.py  helpers.py
