[tool.poetry]
name = "ui-tests-stocktake"
version = "0.1.0"
description = ""
authors = ["zhelyazkokostov <zhelyazko.kostov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
playwright = "^1.52.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
