[tool.poetry]
name = "ui-tests-stocktake"
version = "0.1.0"
description = ""
authors = ["zhelyazkokostov <zhelyazko.kostov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
playwright = "^1.52.0"
pytest = "^8.4.0"
pytest-bdd = "^8.1.0"


[tool.poetry.group.dev.dependencies]
pytest-playwright = "^0.7.0"
pytest-xdist = "^3.7.0"
python-dotenv = "^1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
